get order by customer checked