@@ -4,11 +4,12 @@ import com.rian.MongoRest.model.CustomerModel;
 import com.rian.MongoRest.model.OrderModel;
 import com.rian.MongoRest.repository.CustomerRepository;
 import com.rian.MongoRest.repository.OrderRepository;
+import com.rian.MongoRest.service.TransferDataService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -16,6 +17,7 @@ public class StartupRunnerConfig implements CommandLineRunner {
 
     private final CustomerRepository customerRepo;
     private final OrderRepository orderRepo;
+    private final TransferDataService td;
 
     @Override
     public void run(String... args) throws Exception {
@@ -25,14 +27,23 @@ public class StartupRunnerConfig implements CommandLineRunner {
 
         var customer = new CustomerModel(null, "marin", "kitagawa", 22);
         var customer2 = new CustomerModel(null, "rian", "barroso", 19);
-        var customer3 = new CustomerModel(null, "lalatina", "justness", 13);
 
-        var order = new OrderModel(null, "cheesecake", 23.50, "with extra cheddar", customer);
-        var order2 = new OrderModel(null, "pizza family", 30.00, "with mustard", customer2);
-        var order3 = new OrderModel(null, "milkshake 400ml", 12.90, "choco ball", customer);
-        var order4 = new OrderModel(null, "chicken wings", 23.10, "with ketchup", customer3);
+        customerRepo.save(customer);
+        customerRepo.save(customer2);
 
-        customerRepo.saveAll(Arrays.asList(customer, customer2, customer3));
-        orderRepo.saveAll(Arrays.asList(order, order2, order3, order4));
+        var order = new OrderModel(null, "cheesecake", 23.50,
+                "with extra cheddar", td.fromDTO(customer));
+        var order3 = new OrderModel(null, "milkshake 400ml", 12.90,
+                "choco ball", td.fromDTO(customer));
+        var order4 = new OrderModel(null, "chicken wings", 23.10,
+                "with ketchup", td.fromDTO(customer2));
+
+        orderRepo.saveAll(List.of(order, order3, order4));
+
+        customer.getOrders().addAll(List.of(order, order3));
+        customer2.getOrders().add(order4);
+
+        customerRepo.save(customer);
+        customerRepo.save(customer2);
     }
 }
